# thermos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cases/: .gitignore
cases/cyl_lin/: cyl_lin.inp  doit.py
cases/cyl_lin_area/: cyl_lin_area.inp  doit.py
cases/cyl_lin_klin/: cyl_lin_klin.inp  doit.py
cases/cyl_lin_klin_area/: cyl_lin_klin_area.inp  doit.py
cases/slab_cos/: .gitignore  doit.py  slab_cos.inp
cases/slab_cos_klin/: doit.py  slab_cos_klin.inp
cases/slab_sin_krat/: doit.py  slab_sin_krat.inp
cases/sph_lin/: doit.py  sph_lin.inp
cases/sph_lin_klin/: doit.py  sph_lin_klin.inp
cases/sph_lin_klin_volume/: doit.py  sph_lin_klin_volume.inp
cases/sph_lin_volume/: doit.py  sph_lin_volume.inp
src/: .gitignore  Makefile  analysis.f90  conductivity_function.f90  constants.f90  exception_handler.f90  fileio.f90  finite_difference.f90  finite_element.f90  geometry.f90  input.f90  kind.f90  linalg.f90  main.f90  output.f90  quadrature.f90  source_function.f90
tools/: analysis_plot.py  conductivity_plot.py  plot_settings.py  source_plot.py  temperature_plot.py
